--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ click = "^8.1.7"
 adafruit-circuitpython-ads1x15 = "^2.2.25"
 adafruit-blinka = "^8.39.1"
 numpy = "^1.26.4"
+pandas = "^2.2.2"
 
 
 [build-system]
